# unmanned_systems_ros2_pkg

./: test.py
unmanned_systems_ros2_pkg/: CMakeLists.txt  package.xml
unmanned_systems_ros2_pkg/docs/: creating_custom_pkg.md  download _turtlebot.md  fixing_pro_nav.md  how_to_run_turtlebot.md  multiple_turtlebots.md  setting_up_final_project.md  to_do.md
unmanned_systems_ros2_pkg/include/: cpp_header.hpp
unmanned_systems_ros2_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
unmanned_systems_ros2_pkg/launch/: final_prob_2.launch.py  final_project.launch.py  final_project_world.py  final_slam.launch.py  foot_ninja_move.launch.py  hlds_laser.launch.py  multi_spawn_turtles_launch.py  multi_turtlebot.launch.xml  my_tb3_bringup.launch.py  run_hw_4.launch.py  spawn_turtlebot.launch.py  test_multi_spawn.launch.py  turtlebot3_state_publisher.launch.py  turtlesim_mimic_launch.py
unmanned_systems_ros2_pkg/log/: .~lock.Nov_01_12_45.csv#  .~lock.Oct_04_09_39.csv#  Nov_01_12_45.csv  Nov_09_17_41.csv  Nov_17_13_45.csv  Nov_17_13_47.csv  Nov_17_13_47_1_.csv  Nov_17_13_52.csv  Nov_17_13_52_1_.csv  Nov_17_13_53.csv  Oct_04_09_39.csv  Oct_04_09_39_1_.csv  Oct_05_14_32.csv  Oct_05_15_40.csv  Oct_10_14_34.csv  Oct_18_09_29.csv  Sep_20_21_33.csv  Sep_21_10_43.csv  latest_build
unmanned_systems_ros2_pkg/models/: frames.gv
unmanned_systems_ros2_pkg/scripts/: animated_pn.py  control_multi_bots.py  dungeon_master.py  evader.py  foot_ninja_1.py  foot_ninja_2.py  foot_ninja_spawn.py  logger.py  logger_pursuit.py  pn.py  pursuer.py  python_node.py  ros2_hw_4_node.py  (+7 more)
(+38 files in other folders)
